rest_django_trading/trading-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: restdjango-trading-ingress
spec:
  backend:
    serviceName: restdjango-trading
    servicePort: 8100
